fixed homepage overlay alignment

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,3 +1,8 @@
+.bx--homepage-video-container-cta a {
+  flex: 0 0 calc(33.33333% + .5rem);
+  max-width: calc(33.33333% + 1rem);
+}
+
 .container--homepage a:hover {
   text-decoration: none;
 }
